--- a/kimyongmin/project01/package.json
+++ b/kimyongmin/project01/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@kurkle/color": "^0.3.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.3.3",
+    "chartjs-adapter-dayjs": "^1.0.0",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
@@ -15,6 +18,8 @@
     "react-kakao-maps": "^0.0.13",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "rechart": "^0.0.1",
+    "recharts": "^2.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
